--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@
  */
 buildscript {
 	ext {
-		oml = '2.+'
-   		owl = '2.+'
+		oml = '2.12.+'
+   		owl = '2.12.+'
     } 
 	repositories {
 		mavenLocal()
@@ -14,7 +14,7 @@ buildscript {
 		classpath "org.yaml:snakeyaml:2.+"
 		classpath "io.opencaesar.owl:owl-fuseki-gradle:$owl"
 		classpath "io.opencaesar.owl:owl-query-gradle:$owl"
-		classpath "io.opencaesar.owl:owl-shacl-gradle:$owl"
+		classpath "io.opencaesar.owl:owl-shacl-gradle:+"
 		classpath "io.opencaesar.owl:owl-load-gradle:$owl"
 		classpath "io.opencaesar.owl:owl-save-gradle:$owl"
 		classpath "io.opencaesar.owl:owl-reason-gradle:$owl"
