--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.exclude": {
         "gradle*": true
-    }
+    },
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
