--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,8 @@
         "opencaesar.oml-luxor",
         "opencaesar.oml-vision",
         "stardog-union.stardog-rdf-grammars",
-        "mhutchie.git-graph"
+        "mhutchie.git-graph",
+        "quarto.quarto",
+        "reditorsupport.r"
     ]
 }
