--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.exclude": {
-        "gradle*": true
+        "gradle*": false
     },
     "java.configuration.updateBuildConfiguration": "interactive"
 }
